<resources>
    <string name="app_name">LeetCode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- User login and register-->
    <string name="string_username">输入邮箱</string>
    <string name="string_password">输入密码</string>
    <string name="string_captcha">输入验证码</string>
    <string name="string_password_reset_next">确认</string>
    <string name="string_login_login">登录</string>
    <string name="string_register_register">注册</string>
    <string name="string_login_forget_password"><u>忘记密码</u></string>
    <string name="string_login_register"><u>邮箱注册</u></string>
    <string name="string_login_title">账号密码登录</string>'
    <string name="string_register_title"><u>邮箱注册</u></string>
    <string name="string_password_reset_new_password">输入新密码</string>
    <string name="string_password_reset_show_captcha">此处显示验证码</string>
    <string name="string_password_reset_title">密码重置</string>
    <string name="string_password_reset_send_captcha">发送验证码</string>
</resources>