<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.home.ui.fragment.UserForgetPasswordFragment">

    <ImageView
        android:id="@+id/iv_password_reset_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/leetcode_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_reset_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_password_reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_password_reset_title"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password_reset_username"
        app:layout_constraintTop_toBottomOf="@+id/iv_password_reset_logo"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_password_reset_username"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded_textview"
        android:ems="10"
        android:hint="@string/string_username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_reset_show_captcha"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_reset_title"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_password_reset_next"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded_button"
        android:text="@string/string_password_reset_next"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded_textview"
        android:ems="10"
        android:hint="@string/string_captcha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_reset_show_captcha"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded_textview"
        android:ems="10"
        android:hint="@string/string_password_reset_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button_password_reset_next"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/tv_password_reset_show_captcha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/login_rounded_textview"
        android:hint="@string/string_password_reset_show_captcha"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/button_password_reset_send_captcha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_reset_username" />

    <Button
        android:id="@+id/button_password_reset_send_captcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded_button"
        android:text="@string/string_password_reset_send_captcha"
        app:layout_constraintBottom_toBottomOf="@+id/tv_password_reset_show_captcha"
        app:layout_constraintEnd_toEndOf="@+id/et_password_reset_username"
        app:layout_constraintTop_toTopOf="@+id/tv_password_reset_show_captcha"
        app:layout_constraintVertical_bias="0.666" />
</androidx.constraintlayout.widget.ConstraintLayout>